--- a/snippets/complementary.liquid
+++ b/snippets/complementary.liquid
@@ -1,7 +1,7 @@
 <product-recommendations class="complementary-products" data-url="{{ routes.product_recommendations_url }}?section_id={{ sectionId }}&product_id={{ product.id }}&limit={{ block.limit }}&intent=complementary">
     {%- if recommendations.performed and recommendations.products_count > 0 -%}
     <aside aria-label="{{ 'accessibility.complementary_products' | t }}" {{ block.shopify_attributes }} class="mb{{block.bm}}">
-        <p class="ttlTxt mb15" style="--tcl:{{block.cl}};--tfs:{{block.fs}}px;--tfsm:{{block.fsm}}px;--tfw:{{block.fw}}">{{ block.title }}</p>
+        <p class="ttlTxt mb15" style="--tcl:{{block.cl}};--tfs:{{block.fs}}px;--tfsm:{{block.fsm | divided_by: 100.0 }}rem;--tfw:{{block.fw}}">{{ block.title }}</p>
         <div class="grid gspace recomPr rwcols-{{block.gridmb}} rwcols-md-{{block.gridtb}} rwcols-lg-{{block.grid}}" role="list"
              data-flickity='{ "cellAlign":"left","groupCells":true,"wrapAround":true,"pageDots":false{%- if section.settings.autoplay -%},"autoPlay":{{section.settings.speed | times: 1000}}{% endif %}{%- if isRtl -%},"rightToLeft": true{%- endif -%} }'
              style="--grsp:0 -7px;--grspi:0 7px;--grspm:0 -5px;--grspim:0 5px;">
