--- a/snippets/more-colors.liquid
+++ b/snippets/more-colors.liquid
@@ -1,7 +1,7 @@
 {% assign crp = product %}
 {% if product.metafields.custom.more_colors != blank %}
 <div class="moreColors  mb{{block.bm}}" {{ block.shopify_attributes }}>
-    <h4 class="ttlTxt mb10" style="--tcl:{{block.cl}};--tfs:{{block.fs}}px;--tfsm:{{block.fsm}}px;--tfw:{{block.fw}}">{{ block.title }}</h4>
+    <h4 class="ttlTxt mb10" style="--tcl:{{block.cl}};--tfs:{{block.fs}}px;--tfsm:{{block.fsm | divided_by: 100.0 }}rem;--tfw:{{block.fw}}">{{ block.title }}</h4>
     <div class="grid gspace" style="--grsp:0 -5px;--grspi:0 5px 10px;--grspm:0 -5px;--grspim:0 5px 10px;">
         {%- for product in product.metafields.custom.more_colors.value -%}
             <div class="gitem tc" style="width:{{block.wd}}px">
