--- a/assets/custom.css
+++ b/assets/custom.css
@@ -304,7 +304,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   }
 
   .footer-top a {
-    font-size:26px !important;
+    font-size:.925rem !important;
   }
 
   #MobileNav li a,
@@ -318,6 +318,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   #newsletter-modal h2,
     .footer-links .h4:before,
+    h3,
     #newsletter-modal .mfp-close {
     font-size:1.125rem !important;
     line-height:1.75rem !important;
@@ -436,6 +437,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   :root{
     --fs:'28px';
     --fsm:'24px';
+    --qfsm:'.75rem'
+        
   }
 }
 
@@ -752,10 +755,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   left:50%;
 }
 
-.left-2 {
-  left:0.5rem;
-}
-
 .left-4 {
   left:1rem;
 }
@@ -774,10 +773,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .top-1\/3 {
   top:33.333333%;
-}
-
-.top-2 {
-  top:0.5rem;
 }
 
 .top-4 {
@@ -883,10 +878,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   margin-bottom:2.5rem;
 }
 
-.mb-12 {
-  margin-bottom:3rem;
-}
-
 .mb-14 {
   margin-bottom:3.5rem;
 }
@@ -937,10 +928,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .mt-14 {
   margin-top:3.5rem;
-}
-
-.mt-2 {
-  margin-top:0.5rem;
 }
 
 .mt-20 {
@@ -1219,10 +1206,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .rounded {
   border-radius:0.25rem;
-}
-
-.rounded-2xl {
-  border-radius:1rem;
 }
 
 .rounded-3xl {
@@ -1547,8 +1530,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding-top:3rem;
 }
 
-.pt-16 {
-  padding-top:4rem;
+.pt-14 {
+  padding-top:3.5rem;
 }
 
 .pt-2 {
@@ -1573,6 +1556,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .text-center {
   text-align:center;
+}
+
+.\!text-2_5xl {
+  font-size:1.745rem !important;
+  line-height:2.15rem !important;
 }
 
 .\!text-6xl {
@@ -2318,6 +2306,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .md\:text-center {
     text-align:center;
+  }
+
+  .md\:\!text-4_5xl {
+    font-size:2.5rem !important;
+    line-height:3rem !important;
   }
 
   .md\:\!text-lg {
