--- a/sections/text-line.liquid
+++ b/sections/text-line.liquid
@@ -2,7 +2,7 @@
 <div class="content-indent {{ section.settings.top-offeset}}">    
   <div class="{% if section.settings.fullwidth %}fullwidth npd{% else %}page-width{%endif%}">     
     <div class="section-cover id-{{section.id}} wow fadeIn" style="background-color:{{section.settings.bg}};padding:{{ section.settings.text-padding}}px 10px;">
-      <div class="ttlTxt tc" style="--tcl:{{secSt.cl}};--tfs:{{secSt.fs}}px;--tfsm:{{secSt.fsm}}px;--tff:var(--{{secSt.ff}});--tfw:{{secSt.fw}};--tlh:{{secSt.lh}};">
+      <div class="ttlTxt tc" style="--tcl:{{secSt.cl}};--tfs:{{secSt.fs}}px;--tfsm:{{secSt.fsm | divided_by: 100.0 }}rem;--tff:var(--{{secSt.ff}});--tfw:{{secSt.fw}};--tlh:{{secSt.lh}};">
         {%- if section.settings.infolines != blank %}{{ section.settings.infolines }}{%- endif -%}
       </div>
     </div> 
@@ -81,11 +81,11 @@
                     "type": "range",
                     "id": "fsm",
                     "label": "Font Size (mobile)",
-                    "default": 18,
-                    "min": 10,
-                    "max": 60,
-                    "step": 1,
-                    "unit": "px"
+                    "default": 85,
+                    "min": 50,
+                    "max": 300,
+                    "step": 5,
+                    "unit": "%"
                 },
                 {
                     "type": "select",
