--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -18,7 +18,22 @@
         {%- endif -%}
     </label>
 	{% assign values = '' %}
+	{% assign colors = product.metafields.custom.color.value %}
 	{% for variant in product.variants %}
+
+		{% assign i = forloop.index %}
+		{{ colors }}
+		{% for color in colors %}
+
+			<div class="" style="background-color:{{color}};">1111</div>
+
+			{% if forloop.index == i %}
+				<div class="" style="background-color:{{color}};">1111</div>
+			{% endif %}
+
+		{% endfor %}
+
+
 		{% assign value = variant.options[optindex] %}
 		{% unless values contains value %}
 			{% assign values = values | join: ',' %}
@@ -29,7 +44,8 @@
 			<input class="swatchInput dn single-option-selector-{{secId}}{% if is_color %} colorsw{% endif %}" id="{{product.id}}-{{ optg }}-{{ value | handle }}" data-index="option{{optg}}" data-var="{{ value | handle }}" type="radio" name="{{ swatch.name | handle }}" value="{{ value | escape }}"{% if swatch.selected_value == value %} checked{% endif %} />
 			{% if is_color %}
                 {% if settings.sw_type == "color" %}
-                    <label class="swatchLbl color !shadow-[inset_0px_0px_0px_3.5px_white] {{settings.sw_size}} swt{{value | handle}}" for="{{product.id}}-{{ optg }}-{{ value | handle }}" style="background-color:{{ value | handle }};"></label>
+                    <label class="swatchLbl color !shadow-[inset_0px_0px_0px_3.5px_white] {{settings.sw_size}} swt{{value | handle}}" for="{{product.id}}-{{ optg }}-{{ value | handle }}"
+						style="background-color:{{ colors[forloop.index] }};"></label>
                 {% else %}
                     <label class="swatchLbl color !shadow-[inset_0px_0px_0px_3.5px_white] {{settings.sw_size}} lazyload" for="{{product.id}}-{{ optg }}-{{ value | handle }}" data-bgset="{{ variant.image.src | product_img_url: '100x'}}" data-sizes="auto" data-parent-fit="contain"></label>
                 {% endif %}
@@ -42,23 +58,5 @@
 	{% endfor %}
 </div>
 
-{% comment %} TEMWAYS的不采用了0524 {% endcomment %}
-{% comment %} {% if optindex == 0 %}
-	<div class="w-full rounded-2xl overflow-hidden shadow mb-12 mt-2">
-		<p class="bg-black-900 m-0 py-2 px-6 text-lg text-white font-semibold">Exclusive Offer</p>
-		<p class="py-3 px-6 m-0 text-base text-black-600">Order now, get FREE Mudguards & Kickstand!</p>
-
-		<div class="text-base flex px-6 pb-4">
-			{% for item in (1..3) %}
-				<div class="relative felx flex-col text-center mx-2 first:ml-0 last:mr-0">
-					<div class="absolute top-2 left-2 bg-black-900 text-white text-xs px-2 py-1 rounded-full">FREE</div>
-					<img class="block" src="https://dummyimage.com/150x120/2dd4bf26/fff">
-					<p class="mb-0 font-semibold">Fender Set</p>
-					<p class="mb-0 line-through text-black-600">€45</p>
-				</div>
-			{% endfor %}
-		</div>
-	</div>
-{% endif %} {% endcomment %}
 {% endcapture %}
 {{colorSwatches | strip_newlines | remove: "  " | remove: "	" }}
