--- a/assets/gift-card.css.liquid
+++ b/assets/gift-card.css.liquid
@@ -32,7 +32,7 @@ html,  body { background-color: white; color: black; }
 
 
 /*================ Custom Giftcard Styles ================*/
-.template-giftcard { background: {{setting.color_body_bg}}; }
+.template-giftcard { background: {{settings.color_body_bg}}; }
 .template-giftcard .site-header__logo { padding-left: 0; margin-bottom: 25px; }
 .template-giftcard .site-header__logo-image { max-width: 200px; }
 .template-giftcard .wrapper { max-width: 588px; }
