--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -5,29 +5,29 @@
   {% if section.blocks.size > 0 %}
   <div class="slideshow-wrapper{% if section.settings.section_width %} page-width{% endif %}{% if section.settings.snow_effect %} falling-snow{% endif %}{% if section.settings.snow_style == "style2" %} style2{% else %} style1{% endif %}"{% if section.settings.section_width %} style="max-width:{{ section.settings.box-width}}px; margin:0 auto"{% endif %}>
     {%- capture height -%}
-                {% if section.settings.ht == '1' %}
-                    {% for block in section.blocks %}
-                        {% if block.settings.image != blank %}
-                            --slht:{{ 1 | divided_by: block.settings.image.aspect_ratio | times: 100}}%;
-                            {% if block.settings.imagem != blank %}
-                                --slhtm:{{ 1 | divided_by: block.settings.imagem.aspect_ratio | times: 100}}%;
-                            {% else %}
-                                --slhtm:{{ 1 | divided_by: block.settings.image.aspect_ratio | times: 100}}%;
-                            {% endif %}
-                            {% break %}
-                        {% else %}
-                            --slht:40%;--slhtm:40%;
-                        {% endif %}
-                    {% endfor %}
+        {% if section.settings.ht == '1' %}
+            {% for block in section.blocks %}
+                {% if block.settings.image != blank %}
+                    --slht:{{ 1 | divided_by: block.settings.image.aspect_ratio | times: 100}}%;
+                    {% if block.settings.imagem != blank %}
+                        --slhtm:90vh;
+                    {% else %}
+                        --slhtm:{{ 1 | divided_by: block.settings.image.aspect_ratio | times: 100}}%;
+                    {% endif %}
+                    {% break %}
                 {% else %}
-                    --slht:{{section.settings.htd}}px;--slhtt:{{section.settings.htt}}px;--slhtm:{{section.settings.htm}}px;
+                    --slht:40%;--slhtm:40%;
                 {% endif %}
-                {% unless secSt.arrow %}--arw:none{% endunless %};
-                {% unless secSt.dot %}--dot:none{% endunless %};	
-                --arrow: {{secSt.arrowc}};
-                 --dotsa:{{secSt.dots }};
-                 --dots: {{secSt.dots |   color_modify:'alpha', 0.3 }};
-            {%- endcapture -%}
+            {% endfor %}
+        {% else %}
+            --slht:{{section.settings.htd}}px;--slhtt:{{section.settings.htt}}px;--slhtm:{{section.settings.htm}}px;
+        {% endif %}
+        {% unless secSt.arrow %}--arw:none{% endunless %};
+        {% unless secSt.dot %}--dot:none{% endunless %};	
+        --arrow: {{secSt.arrowc}};
+            --dotsa:{{secSt.dots }};
+            --dots: {{secSt.dots |   color_modify:'alpha', 0.3 }};
+    {%- endcapture -%}
     <div class="slideshow pr ctStyle {% if secSt.style == 'hbstyle' %}hbStyle{% endif %}" style="{{ height }}" id="ss{{ section.id }}" 
     data-flickity='{ "cellAlign":"left", "fade":true, "selectedAttraction": 0.1, "friction": 1, {%- if section.settings.autoplay -%}"autoPlay":{{section.settings.speed | times: 1000}},{% endif %}{%- if settings.rtl -%}"rightToLeft": true,{%- endif -%} "imagesLoaded": true}'>
     {% for block in section.blocks %}
@@ -67,7 +67,7 @@
                                  data-src="{{ image }}" data-widths="[400,700,1000,1200,1600,2000]" data-sizes="auto" alt="{{ blkSt.image.alt | escape }}" style="--ipos:{{imgPos}};">
                             {% if blkSt.imagem != blank %}
                                 {%- assign imagem = blkSt.imagem | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
-                                <img class="imgFt ssimg hide-md hide-lg lazyload" src="{{ blkSt.imagem | img_url: "100x" }}" width="{{blkSt.imagem.width}}" height="{{blkSt.imagem.height}}"
+                                <img class="imgFt md:object-center !object-bottom ssimg hide-md hide-lg lazyload" src="{{ blkSt.imagem | img_url: "100x" }}" width="{{blkSt.imagem.width}}" height="{{blkSt.imagem.height}}"
                                  data-src="{{ imagem }}" data-widths="[400,700,1000,1400]" data-sizes="auto" alt="{{ blkSt.imagem.alt | escape }}" style="--ipos:{{img2Pos}};">
                             {% endif %}
                         {% elsif block.type == 'video' and blkSt.video_url != blank %}
