--- a/snippets/product-tabs-nav.liquid
+++ b/snippets/product-tabs-nav.liquid
@@ -3,10 +3,10 @@
   <div section-name="product-tabs-nav" class="bg-black-800 z-50 w-full top-0">
       <div class="page-width mx-auto items-center">
         <div class="flex justify-between text-white">
-          <div class="mb-0 text-lg font-semibold py-3 items-center md:flex hidden">{{ product.title }}</div>
+          <div class="mb-0 text-lg font-semibold py-3 items-center flex">{{ product.title }}</div>
           <div tag-name="tabs-wrapper" class="flex text-base font-semibold items-center">
           {% assign pClass = 'mb-0 md:mx-6 mx-4 md:py-3 h-full text-black-500 flex items-center' %}
-            <a href="#{{sets.anchor_href1}}" class="{{pClass}} active md:flex hidden">{{sets.anchor1}}</a>
+            <a href="#{{sets.anchor_href1}}" class="{{pClass}} active flex">{{sets.anchor1}}</a>
             <a href="#{{sets.anchor_href2}}" class="{{pClass}}">{{sets.anchor2}}</a>
             <a href="#{{sets.anchor_href3}}" class="{{pClass}}">{{sets.anchor3}}</a>
           </div>
