--- a/assets/custom.css
+++ b/assets/custom.css
@@ -149,6 +149,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 }
 
 [section-name = 'multiple-image-text'] .flickity-button {
+  visibility:hidden;
   --tw-bg-opacity:1;
   background-color:rgb(68 68 68 / var(--tw-bg-opacity));
 }
@@ -156,6 +157,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 [section-name = 'multiple-image-text'] .flickity-button:hover {
   --tw-bg-opacity:1;
   background-color:rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 768px) {
+  [section-name = 'multiple-image-text'] .flickity-button {
+    visibility:visible;
+  }
 }
 
 [section-name = 'multiple-image-text'] .flickity-button-icon {
@@ -198,12 +205,17 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 [section-name = 'product-tabs-nav'] [tag-name = 'tabs-wrapper'] >a.active {
   border-width:0px;
-  border-bottom-width:4px;
   border-style:solid;
   --tw-border-opacity:1;
   border-color:rgb(255 255 255 / var(--tw-border-opacity));
   --tw-text-opacity:1;
   color:rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  [section-name = 'product-tabs-nav'] [tag-name = 'tabs-wrapper'] >a.active {
+    border-bottom-width:4px;
+  }
 }
 
 [tag-name = 'simple-menu-item'] ul.dropdown li {
@@ -276,9 +288,17 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 @media only screen and (max-width:765px) {
   .pr_thumbs_item {
-    margin-left:0.3%;
-    margin-right:0.3%;
-    width:18.5%;
+    margin-left:0.25rem;
+    margin-right:0.25rem;
+    width:5.65rem;
+  }
+
+  @media (min-width: 768px) {
+    .pr_thumbs_item {
+      margin-left:0.3%;
+      margin-right:0.3%;
+      width:18.5%;
+    }
   }
 
   .product-single .flickity-button {
@@ -744,10 +764,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   bottom:3rem;
 }
 
-.bottom-6 {
-  bottom:1.5rem;
-}
-
 .left-0 {
   left:0px;
 }
@@ -760,10 +776,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   left:1rem;
 }
 
-.left-6 {
-  left:1.5rem;
-}
-
 .right-4 {
   right:1rem;
 }
@@ -772,8 +784,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   top:0px;
 }
 
+.top-1\/2 {
+  top:50%;
+}
+
 .top-1\/3 {
   top:33.333333%;
+}
+
+.top-13 {
+  top:3.25rem;
 }
 
 .top-4 {
@@ -782,6 +802,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .top-8 {
   top:2rem;
+}
+
+.bottom-6 {
+  bottom:1.5rem;
+}
+
+.left-6 {
+  left:1.5rem;
 }
 
 .z-10 {
@@ -796,10 +824,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   z-index:50;
 }
 
-.order-1 {
-  order:1;
-}
-
 .order-2 {
   order:2;
 }
@@ -810,6 +834,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .order-5 {
   order:5;
+}
+
+.order-1 {
+  order:1;
 }
 
 .\!m-0 {
@@ -840,9 +868,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   margin-right:auto;
 }
 
-.my-2 {
-  margin-top:0.5rem;
-  margin-bottom:0.5rem;
+.my-3 {
+  margin-top:0.75rem;
+  margin-bottom:0.75rem;
 }
 
 .my-4 {
@@ -853,6 +881,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .my-8 {
   margin-top:2rem;
   margin-bottom:2rem;
+}
+
+.my-2 {
+  margin-top:0.5rem;
+  margin-bottom:0.5rem;
 }
 
 .\!mb-0 {
@@ -877,6 +910,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .mb-10 {
   margin-bottom:2.5rem;
+}
+
+.mb-12 {
+  margin-bottom:3rem;
 }
 
 .mb-14 {
@@ -905,6 +942,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .ml-1 {
   margin-left:0.25rem;
+}
+
+.ml-2 {
+  margin-left:0.5rem;
 }
 
 .ml-4 {
@@ -995,6 +1036,18 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   height:2.75rem !important;
 }
 
+.\!h-7 {
+  height:1.75rem !important;
+}
+
+.\!h-auto {
+  height:auto !important;
+}
+
+.h-1 {
+  height:0.25rem;
+}
+
 .h-11 {
   height:2.75rem;
 }
@@ -1055,8 +1108,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   max-height:2.25rem;
 }
 
+.\!w-7 {
+  width:1.75rem !important;
+}
+
 .\!w-full {
   width:100% !important;
+}
+
+.w-0 {
+  width:0px;
 }
 
 .w-1\/2 {
@@ -1131,13 +1192,27 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   width:100%;
 }
 
+.max-w-1\/3 {
+  max-width:33.333%;
+}
+
 .-translate-x-1\/2 {
   --tw-translate-x:-50%;
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.-translate-y-1\/2 {
+  --tw-translate-y:-50%;
+  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .-translate-y-6 {
   --tw-translate-y:-1.5rem;
+  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-180 {
+  --tw-rotate:180deg;
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1249,6 +1324,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   border-bottom-width:2px;
 }
 
+.border-t {
+  border-top-width:1px;
+}
+
 .border-t-\[\.5rem\] {
   border-top-width:.5rem;
 }
@@ -1278,6 +1357,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .\!bg-transparent {
   background-color:transparent !important;
+}
+
+.bg-black-400 {
+  --tw-bg-opacity:1;
+  background-color:rgb(170 170 170 / var(--tw-bg-opacity));
 }
 
 .bg-black-700 {
@@ -1342,6 +1426,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   background-size:cover;
 }
 
+.bg-center {
+  background-position:center;
+}
+
 .bg-right {
   background-position:right;
 }
@@ -1398,19 +1486,24 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding:2px;
 }
 
+.\!px-0 {
+  padding-left:0px !important;
+  padding-right:0px !important;
+}
+
 .\!px-4 {
   padding-left:1rem !important;
   padding-right:1rem !important;
 }
 
+.\!py-1 {
+  padding-top:0.25rem !important;
+  padding-bottom:0.25rem !important;
+}
+
 .\!py-2 {
   padding-top:0.5rem !important;
   padding-bottom:0.5rem !important;
-}
-
-.px-1 {
-  padding-left:0.25rem;
-  padding-right:0.25rem;
 }
 
 .px-2 {
@@ -1461,6 +1554,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .py-3 {
   padding-top:0.75rem;
   padding-bottom:0.75rem;
+}
+
+.py-5 {
+  padding-top:1.25rem;
+  padding-bottom:1.25rem;
+}
+
+.px-1 {
+  padding-left:0.25rem;
+  padding-right:0.25rem;
 }
 
 .py-4 {
@@ -1514,6 +1617,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .pr-0 {
   padding-right:0px;
+}
+
+.pr-2 {
+  padding-right:0.5rem;
 }
 
 .pr-6 {
@@ -1579,9 +1686,19 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   line-height:1.75rem !important;
 }
 
+.\!text-sm {
+  font-size:0.875rem !important;
+  line-height:1.25rem !important;
+}
+
 .\!text-xxs {
   font-size:0.65rem !important;
   line-height:0.8rem !important;
+}
+
+.text-1_5xl {
+  font-size:1.375rem;
+  line-height:1.775rem;
 }
 
 .text-2_5xl {
@@ -1597,6 +1714,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .text-3xl {
   font-size:1.875rem;
   line-height:2.25rem;
+}
+
+.text-\[\.925rem\] {
+  font-size:.925rem;
 }
 
 .text-base {
@@ -1656,6 +1777,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   font-style:italic;
 }
 
+.\!leading-\[90\%\] {
+  line-height:90% !important;
+}
+
 .leading-6 {
   line-height:1.5rem;
 }
@@ -1711,9 +1836,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   opacity:0.6;
 }
 
-.\!shadow-\[inset_0px_0px_0px_3\.5px_white\] {
-  --tw-shadow:inset 0px 0px 0px 3.5px white !important;
-  --tw-shadow-colored:inset 0px 0px 0px 3.5px var(--tw-shadow-color) !important;
+.\!shadow-\[inset_0px_0px_0px_5px_white\] {
+  --tw-shadow:inset 0px 0px 0px 5px white !important;
+  --tw-shadow-colored:inset 0px 0px 0px 5px var(--tw-shadow-color) !important;
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
@@ -1739,6 +1864,18 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   --tw-shadow:0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored:0 1px 2px 0 var(--tw-shadow-color);
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow:0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored:0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.\!shadow-\[inset_0px_0px_0px_3\.5px_white\] {
+  --tw-shadow:inset 0px 0px 0px 3.5px white !important;
+  --tw-shadow-colored:inset 0px 0px 0px 3.5px var(--tw-shadow-color) !important;
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
 .shadow-black-700 {
@@ -1791,10 +1928,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .shopify-section .grid.flickity-enabled {
   display:block;
-}
-
-[aria-labelledby = 'pi-unionpay'] {
-  display:none;
 }
 
 @media only screen and (max-width:750px){
@@ -1890,12 +2023,25 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     position:absolute;
   }
 
+  .md\:bottom-6 {
+    bottom:1.5rem;
+  }
+
+  .md\:left-6 {
+    left:1.5rem;
+  }
+
   .md\:order-2 {
     order:2;
   }
 
   .md\:m-0 {
     margin:0px;
+  }
+
+  .md\:mx-0 {
+    margin-left:0px;
+    margin-right:0px;
   }
 
   .md\:mx-3 {
@@ -1929,12 +2075,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     margin-bottom:0px;
   }
 
+  .md\:mb-1 {
+    margin-bottom:0.25rem;
+  }
+
   .md\:mb-12 {
     margin-bottom:3rem;
   }
 
   .md\:mb-13 {
     margin-bottom:3.25rem;
+  }
+
+  .md\:mb-2 {
+    margin-bottom:0.5rem;
   }
 
   .md\:mb-20 {
@@ -2033,12 +2187,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     display:none;
   }
 
-  .md\:h-8 {
-    height:2rem;
+  .md\:\!h-7 {
+    height:1.75rem !important;
   }
 
   .md\:h-auto {
     height:auto;
+  }
+
+  .md\:h-8 {
+    height:2rem;
   }
 
   .md\:w-1\/2 {
@@ -2065,16 +2223,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     width:60%;
   }
 
+  .md\:w-4\/5 {
+    width:80%;
+  }
+
   .md\:w-48 {
     width:12rem;
   }
 
   .md\:w-56 {
     width:14rem;
-  }
-
-  .md\:w-8 {
-    width:2rem;
   }
 
   .md\:w-\[10\%\] {
@@ -2133,9 +2291,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     width:100%;
   }
 
-  .md\:-translate-y-8 {
-    --tw-translate-y:-2rem;
-    transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  .md\:w-8 {
+    width:2rem;
   }
 
   .md\:translate-x-0 {
@@ -2143,10 +2300,19 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .md\:-translate-y-8 {
+    --tw-translate-y:-2rem;
+    transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .md\:scale-90 {
     --tw-scale-x:.9;
     --tw-scale-y:.9;
     transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:cursor-default {
+    cursor:default;
   }
 
   .md\:flex-row {
@@ -2204,6 +2370,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-right:1.75rem !important;
   }
 
+  .md\:\!py-0 {
+    padding-top:0px !important;
+    padding-bottom:0px !important;
+  }
+
   .md\:\!py-3 {
     padding-top:0.75rem !important;
     padding-bottom:0.75rem !important;
@@ -2212,6 +2383,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   .md\:px-0 {
     padding-left:0px;
     padding-right:0px;
+  }
+
+  .md\:px-1 {
+    padding-left:0.25rem;
+    padding-right:0.25rem;
   }
 
   .md\:px-4 {
@@ -2328,6 +2504,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     line-height:3rem !important;
   }
 
+  .md\:\!text-base {
+    font-size:1rem !important;
+    line-height:1.5rem !important;
+  }
+
   .md\:\!text-lg {
     font-size:1.125rem !important;
     line-height:1.75rem !important;
@@ -2376,9 +2557,23 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     line-height:1.75rem;
   }
 
+  .md\:text-sm {
+    font-size:0.875rem;
+    line-height:1.25rem;
+  }
+
   .md\:text-xl {
     font-size:1.25rem;
     line-height:1.75rem;
+  }
+
+  .md\:\!leading-\[95\%\] {
+    line-height:95% !important;
+  }
+
+  .md\:text-white {
+    --tw-text-opacity:1;
+    color:rgb(255 255 255 / var(--tw-text-opacity));
   }
 
   .md\:opacity-0 {
@@ -2391,6 +2586,18 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .md\:opacity-30 {
     opacity:0.3;
+  }
+
+  .md\:\!shadow-\[inset_0px_0px_0px_3\.5px_white\] {
+    --tw-shadow:inset 0px 0px 0px 3.5px white !important;
+    --tw-shadow-colored:inset 0px 0px 0px 3.5px var(--tw-shadow-color) !important;
+    box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+  }
+
+  .md\:shadow {
+    --tw-shadow:0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored:0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+    box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
   .md\:transition-all {
