--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -9,10 +9,10 @@
       {% assign forFirsrt = forloop.first %}
           <li>
             <div tag-name='accordion-header' class="flex flex-row border-solid border-0 border-b border-black-700 cursor-pointer justify-between items-center">
-                <p class="md:text-2xl text-xl font-semibold md:my-6 my-2">{{blkSt.title}}</p>
-                <div tag-name='accordion-arrow' class="overflow-hidden md:w-8 md:h-8 h-6 w-6">
-                  <svg t="1685002036388" class="block md:w-8 md:h-8 h-6 w-6" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1832" width="32" height="32"><path d="M512 34.133333C247.808 34.133333 34.133333 247.808 34.133333 512s213.674667 477.866667 477.866667 477.866667 477.866667-213.674667 477.866667-477.866667S776.192 34.133333 512 34.133333z m220.501333 500.394667h-197.973333V778.24c-25.258667 0-45.738667-20.48-45.738667-45.738667v-197.973333H245.76c0-25.258667 20.48-45.738667 45.738667-45.738667h197.973333V245.76c25.258667 0 45.738667 20.48 45.738667 45.738667v197.973333H778.24c0 24.576-20.48 45.056-45.738667 45.056z" fill="#dbdbdb" p-id="1833" data-spm-anchor-id="a313x.7781069.0.i10" class="selected"></path></svg>
-                  <svg t="1685002046935" class="{%- unless forFirsrt -%}hidden{% endunless %} block md:w-8 md:h-8 h-6 w-6 md:-translate-y-8 -translate-y-6 transition-all" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2096" width="32" height="32"><path d="M512 34.133333C247.808 34.133333 34.133333 247.808 34.133333 512s213.674667 477.866667 477.866667 477.866667 477.866667-213.674667 477.866667-477.866667S776.192 34.133333 512 34.133333z m266.24 456.021334c0 24.576-19.797333 44.373333-44.373333 44.373333H245.76v-1.365333c0-24.576 19.797333-44.373333 44.373333-44.373334H778.24v1.365334z" fill="#2c2c2c" p-id="2097"></path></svg>
+                <p class="md:text-2xl text-1_5xl font-semibold md:my-6 my-3">{{ blkSt.title }}</p>
+                <div tag-name='accordion-arrow' class="overflow-hidden text-white relative">
+                  <i class="{%- unless forFirsrt -%}hidden {% endunless %}at at-minus-r bg-black-800 md:text-2xl md:!leading-[95%] !leading-[90%] p-2 rounded-full transition-all top-1/2 -translate-y-1/2 absolute"></i> 
+                  <i class="at at-plus-r bg-black-400 md:text-2xl md:!leading-[95%] !leading-[90%] p-2 rounded-full"></i> 
                 </div>
             </div>
 
@@ -25,29 +25,30 @@
                     {% for obj in objArr %}
                       {% assign title = obj | split: ':' | first  %}
                       {% assign content = obj | split: ':' | last  %}
-                      {% if blkSt.slide_w == "25%" %} {% assign wClass = "md:w-1/4 w-1/2" %} {% else %} {% assign wClass = "w-full" %} {% endif %}
+                      {% if blkSt.slide_w == "25%" %} {% assign wClass = "md:w-1/4 w-1/2 md:pr-0 pr-2" %} {% else %} {% assign wClass = "w-full" %} {% endif %}
                       <div class="{{ wClass }} md:mb-8 mb-6 ">
-                        <p class="m-0 font-semibold">{{title}}</p>
-                        <p class="m-0">{{content | newline_to_br }}</p>
+                        <p class="m-0 font-semibold md:text-base text-lg leading-tight md:mb-0 mb-4">{{title}}</p>
+                        <p class="m-0 md:text-base text-sm">{{content | newline_to_br }}</p>
                       </div>
                     {% endfor %}
                   </div>
 
               {%- when "image" -%}
                   <div>
-                    {{ blkSt.url_pc | image_url: width:1480 | image_tag: height:blkSt.url_pc.height, class:"w-full md:block hidden lazyload", loading: 'lazy'}}
-                    {{ blkSt.url_mb | image_url: width:765 | image_tag: height:blkSt.url_mb.height, class:"w-full md:hidden block", loading: 'lazy'}}
+                    {{ blkSt.url_pc | image_url: width: 1480 | image_tag: height: blkSt.url_pc.height, class: "w-full md:block hidden lazyload", loading: 'lazy' }}
+                    {{ blkSt.url_mb | image_url: width: 980 | image_tag: height: blkSt.url_mb.height, class: "w-full md:hidden block h-auto", loading: 'lazy' }}
                   </div>
 
               {%- when "imageGrid" -%}
-              {% assign divClass1 = "flex flex-wrap font-semibold md:mb-12 mb-8" %}
+              {% assign divClass1 = "flex flex-wrap font-semibold md:mb-12 md:mb-8 mb-6 md:pt-0 pt-10 relative" %}
               {% assign divClass2 = "xl:w-1/7 lg:w-1/5 md:w-1/3 w-1/2 mb-4" %}
+              {% assign tHClass2 = "md:static absolute top-0 text-lg" %}
               {% assign divClass3 = "mx-2 rounded overflow-hidden shadow h-full" %}
               {% assign pClass = "md:text-base text-sm leading-tight p-2 pb-0 mb-2" %}
               {% assign imgClass = "block max-h-36 mx-auto" %}
                   {%- if product.metafields.custom[blkSt.metafield1] != blank -%}
                   <div class="{{ divClass1 }}">
-                    <div class="{{ divClass2 }} text-lg">{{blkSt.text1}}</div>
+                    <div class="{{ divClass2 }} {{ tHClass2 }}">{{ blkSt.text1 }}</div>
                     {% for image in product.metafields.custom[blkSt.metafield1].value %}
                       <div class="{{ divClass2 }}">
                         <div class="{{ divClass3 }}">
@@ -60,7 +61,7 @@
                   {%- endif -%}
                   {%- if product.metafields.custom[blkSt.metafield2] != blank -%}
                   <div class="{{ divClass1 }}">
-                    <div class="{{ divClass2 }} text-lg">{{blkSt.text2}}</div>
+                    <div class="{{ divClass2 }} {{ tHClass2 }}">{{ blkSt.text2 }}</div>
                     {% for image in product.metafields.custom[blkSt.metafield2].value %}
                       <div class="{{ divClass2 }}">
                         <div class="{{ divClass3 }}">
@@ -73,7 +74,7 @@
                   {%- endif -%}
                   {%- if product.metafields.custom[blkSt.metafield3] != blank -%}
                   <div class="{{ divClass1 }}">
-                    <div class="{{ divClass2 }} text-lg">{{blkSt.text3}}</div>
+                    <div class="{{ divClass2 }} {{ tHClass2 }}">{{ blkSt.text3 }}</div>
                     {% for image in product.metafields.custom[blkSt.metafield3].value %}
                       <div class="{{ divClass2 }}">
                         <div class="{{ divClass3 }}">
