--- a/sections/banner-with-text.liquid
+++ b/sections/banner-with-text.liquid
@@ -15,10 +15,20 @@
       <div class="{% unless hbStyle %}fl1{% endunless %}{% if hbStyle %}md:w-3/5 w-full md:order-0 order-5{% endif %} imgCol wow{% if blkSt.layout == 'right' %} fadeInRight{% else %} fadeInLeft{% endif %}" data-wow-delay="{{delay_time}}ms">
         {% if blkSt.image != blank %}
           {%- assign img_url = blkSt.image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
-          <span class="imgWrapper" style="max-width:{{ blkSt.image.width }}px;">
+          {%- assign spanClass = "" -%}
+
+          {% if blkSt.image_mb != blank %}
+          {% assign spanClass = "md:block hidden" %}
+          <section class="md:hidden block"> {{ blkSt.image_mb | image_url: width: 980 | image_tag: height: blkSt.bg_img_mb.height, class: 'w-full mt-8', lazyload: true }} </section>
+          {% endif %}
+
+          <span class="{{ spanClass }} imgWrapper" style="max-width:{{ blkSt.image.width }}px;">
             <img class="imgFl feature-row__image lazyload" width="{{ blkSt.image.width }}" height="{{ blkSt.image.height }}" loading="lazy"
               data-src="{{ img_url }}" data-widths="[180, 360, 540, 720, 900]" data-aspectratio="{{ blkSt.image.aspect_ratio }}" data-sizes="auto" alt="{{ blkSt.image.alt | escape }}">
           </span>
+
+
+
         {% else %}
         	{{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
         {% endif %}
@@ -51,10 +61,10 @@
           {% if hbStyle %}
               <div class="md:mt-20 mt-10 ">
               {% if blkSt.bottom_logo != blank %}
-                <a class="mr-4" href="{{blkSt.logo_url}}">{{ blkSt.bottom_logo | image_url: height: 100 | image_tag: height: blkSt.bottom_logo.height, loading: 'lazy' }}</a>
+                <a class="mr-4 inline-block" href="{{blkSt.logo_url}}">{{ blkSt.bottom_logo | image_url: height: 300 | image_tag: height: blkSt.bottom_logo.height, loading: 'lazy' }}</a>
               {% endif %}
               {% if blkSt.bottom_logo2 != blank %}
-                <a href="{{blkSt.logo_url2}}">{{ blkSt.bottom_logo2 | image_url: height: 100 | image_tag: height: blkSt.bottom_logo2.height, loading: 'lazy' }}</a>
+                <a href="{{blkSt.logo_url2}}">{{ blkSt.bottom_logo2 | image_url: height: 300 | image_tag: height: blkSt.bottom_logo2.height, loading: 'lazy' }}</a>
               {% endif %}
               </div>
           {% endif %}
@@ -456,20 +466,25 @@
         "type": "row",
         "name": "Block",
         "settings": [
-           {
-        "type": "image_picker",
-        "id": "image",
-        "label": "Image"
-      },  
-       {
-            "type": "select",
-            "id": "layout",
-			"label":"Image alignment",
- 			"default": "left",
-			"options": [
-        { "value": "left","label":"Left"},
-				{ "value": "right","label":"Right"}
-			]
+          {
+            "type": "image_picker",
+            "id": "image",
+            "label": "Image"
+          },  
+          {
+            "type": "image_picker",
+            "id": "image_mb",
+            "label": "Image (mobile)"
+          },  
+      {
+        "type": "select",
+        "id": "layout",
+        "label":"Image alignment",
+        "default": "left",
+        "options": [
+          { "value": "left","label":"Left"},
+          { "value": "right","label":"Right"}
+        ]
       },	  
       {
         "type": "textarea",
