--- a/sections/logo-slider.liquid
+++ b/sections/logo-slider.liquid
@@ -5,7 +5,7 @@
 style="{% if secSt.bg_color != blank %}background-color: {{ secSt.bg_color}};{% endif %}">
 
   <div class="page-width px-4">
-    <div class="md:rounded-section rounded-4xl bg-no-repeat bg-cover md:py-20 py-10" style="{% if secSt.bg_img != blank %}background-image: url({{ secSt.bg_img | image_url:master}});{% endif %}">
+    <div class="md:rounded-section rounded-4xl bg-no-repeat bg-cover md:py-20 py-10 bg-center" style="{% if secSt.bg_img != blank %}background-image: url({{ secSt.bg_img | image_url:master}});{% endif %}">
       <div class="md:w-3/5 md:px-0 px-4 mx-auto">
 
         <div id="carousel-main-{{section.id}}" 
