--- a/sections/multiple-image-text.liquid
+++ b/sections/multiple-image-text.liquid
@@ -3,10 +3,13 @@
 {% if secSt.enable_slider %} {% assign ebSlider = true %} {% else %} {% assign ebSlider = false %} {% endif %}
 
 <section section-name="multiple-image-text" class="{% render 'section-interva-set', secSt:secSt %}" >
-  <div class="page-width px-4">
+
+  
+
+  <div class="page-width {% if ebSlider %}md:px-4 !px-0{% else %}px-4{% endif %}">
     <h1 class="md:text-4_5xl text-3xl text-center md:mb-12 mb-8">{{secSt.title}}</h1>
 
-    <div {% if ebSlider %}data-flickity='{"pageDots": false, "draggable": false, "imagesLoaded": true,"wrapAround":true }' {% else %} class="md:flex"{% endif %} >
+    <div {% if ebSlider %}tag-name='multiple-flickity' data-flickity='{"pageDots": false, "draggable": true, "imagesLoaded": true,"wrapAround":true }' {% else %} class="md:flex"{% endif %} >
       {% for block in section.blocks %}
       {%- assign blkSt = block.settings -%}
       
@@ -15,22 +18,24 @@
       {% if secSt.layout == 'textImg' %}{% assign textImg = true %} {% else %} {% assign textImg = false %} {% endif %}
       {% if forloop.length < 3 %} {% assign rounded = 'md:rounded-section' %} {% else %} {% assign rounded = '' %} {% endif %}
 
-      <div class="md:{{blkSt.slide_w}} {% unless ebSlider %}md:mx-3 last:mr-0 first:ml-0 {% endunless %}
-       {% if textImg or ebSlider %}flex{% endif %} w-full flex-col md:m-0 mb-8 relative">  
-        <div class="{{rounded}} rounded-3xl overflow-hidden {% if textImg or ebSlider %}h-full{% endif %} {% if ebSlider %}mx-2{% endif %} {% unless textImg %}md:mb-6 mb-2{% endunless %}"
+      <div class="md:{{ blkSt.slide_w }} {% if ebSlider %}w-4/5{% endif %} {% unless ebSlider %}md:mx-3 last:mr-0 first:ml-0 {% endunless %}
+       {% if textImg or ebSlider %}flex{% endif %} flex-col md:m-0 mb-8 relative">  
+        <div class="{{rounded}} rounded-3xl overflow-hidden {% if textImg or ebSlider %}h-full{% endif %} {% if ebSlider %}mx-2{% endif %} {% unless textImg %}md:mb-6{% endunless %} mb-2"
           style="background-color:{{blkSt.bg_color}};">
 
         {% case block.type %} 
           {% when "image" %}
-            {% assign imgClass = 'h-full object-cover block w-full h-auto' %}
+            {% assign imgClass = 'object-cover block w-full h-auto' %}
             {% if blkSt.img_link != blank %} 
-            {% assign imgClass = 'h-full object-cover block w-full enlarge h-auto' %}
+            {% assign imgClass = 'object-cover block w-full enlarge h-auto' %}
             <a href="{{ blkSt.img_link }}" > 
             {% endif %}
-              <section class="md:block hidden">{{ blkSt.bg_img | image_url: height: 650 | image_tag: class: imgClass, lazyload: true }}</section>
-              {% if blkSt.bg_img_mb != blank %}
-              <section class="md:hidden block "> {{ blkSt.bg_img_mb | image_url: height: 650 | image_tag: class: imgClass, lazyload: true }} </section>
-              {% endif %}
+            {% assign sectionClass = "" %}
+            {% if blkSt.bg_img_mb != blank %}
+            {% assign sectionClass = "md:block hidden" %}
+            <section class="md:hidden block"> {{ blkSt.bg_img_mb | image_url: width: 980 | image_tag: height: blkSt.bg_img_mb.height, class: imgClass, lazyload: true }} </section>
+            {% endif %}
+            <section class="{{ sectionClass }}">{{ blkSt.bg_img | image_url: width: 980 | image_tag: height: blkSt.bg_img.height, class: imgClass, lazyload: true }}</section>
             {% if blkSt.img_link != blank %} </a> {% endif %}
           {% else %}
             <div class="video-wrapper"><iframe src="//www.youtube.com/embed/{{ blkSt.video_url.id }}?rel=0&showinfo=0&vq=720" width="850" height="480" frameborder="0" allowfullscreen></iframe></div>
@@ -40,10 +45,10 @@
         {% if blkSt.text_main != blank %}
 
 
-          <section class="{% if textImg %}absolute bottom-6 left-6 text-white w-4/5{% endif %} ">
+          <section class="{% if textImg %}md:absolute md:bottom-6 md:left-6 md:text-white md:w-4/5 md:mx-0 mx-2{% endif %}">
             {% if blkSt.img_link != blank %} <a href="{{ blkSt.img_link }}" > {% endif %}
-              <h1 class="{% if textImg %}md:text-xl text-lg mb-1 {% else %} md:text-3xl text-xl mb-2{% endif %}">{{ blkSt.text_main }}</h1>
-              <p class="{% if textImg %}text-base{% else %}md:text-lg{% endif %} break-words">{{ blkSt.text_sub }}</p>
+              <h1 class="{% if textImg %}md:text-xl md:mb-1{% else %} md:text-3xl {% endif %}mb-2 text-xl">{{ blkSt.text_main }}</h1>
+              <p class="{% if textImg %}md:text-base{% else %}md:text-lg{% endif %} break-words">{{ blkSt.text_sub }}</p>
             {% if blkSt.img_link != blank %} </a> {% endif %}
           </section>
         {% endif %}
@@ -57,11 +62,21 @@
     {% if secSt.bottom_line %}
       <hr class="h-px my-8 bg-gray-200 border-0">
     {% endif %}
+
+
+    {% if ebSlider %}
+      <div class="progress-bar h-1 bg-vi w-0"></div>
+    {% endif %}
+
+
   </div>
 
 
 </section>  
 
+<script>
+
+</script>
 
 {% schema %}
   {
