--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -23,8 +23,8 @@
     assign product_description_width = 'wd50-md'
 
     if settings.product_latyout == "style1"
-        assign product_image_width = 'wd60-md xl:pr-10 lg:pr-6 md:pr-4 pr-0 pl-0'
-        assign product_description_width = 'wd40-md xl:pl-10 lg:pl-6 md:pl-4 md:pr-0 px-4'
+        assign product_image_width = 'wd60-md xl:pr-10 lg:pr-6 md:pr-4 pr-0 pl-0 md:mb-6 mb-10'
+        assign product_description_width = 'wd40-md xl:pl-10 lg:pl-6 md:pl-4 md:pr-0'
     elsif settings.product_latyout == "style2"
         assign product_image_width = 'wd66-md'
         assign product_description_width = 'wd33-md'
@@ -177,7 +177,7 @@
             <hr class="mt0 mb{{blkSt.bm}}" style="border-color: {{blkSt.hrc}}" {{ block.shopify_attributes }} /> 
         {%  when 'title' %}
             <h1 class="product-single__title ttlTxt {{blkSt.transform}} mb{{blkSt.bm}}" style="--tcl:{{blkSt.cl}};--tfs:{{blkSt.fs}}px;--tfsm:{{blkSt.fsm | divided_by: 100.0 }}rem;--tff:var(--{{blkSt.ff}});--tfw:{{blkSt.fw}};--tlh:1.4;" {{ block.shopify_attributes }}>{{ product.title }}</h1>
-	   		<p class="text-lg border-solid border-0 border-b border-black-300 pb-4">Aviation grade magnesium alloy</p>
+	   		<p class="text-lg border-solid border-0 border-b border-black-300 pb-4 md:mb-5 mb-4">Aviation grade magnesium alloy</p>
 	    {%  when 'price' %}
             {%- if product.metafields.custom.product_group != blank -%}<style>.priceSingle{--pcl:{{blkSt.pcl}};--pcls:{{blkSt.pcls}};--fs:{{blkSt.fs}}px; --fsm:{{blkSt.fsm | divided_by: 100.0 }}rem;--pfw:{{ blkSt.pfw}};}</style>{%- endif -%}
             {%- unless settings.hide-price or product.metafields.custom.product_group != blank -%}
@@ -220,7 +220,7 @@
             {%- endif -%}
           {%- endunless -%}								
         {%  when 'text' %}
-            <div class="customtx mb{{blkSt.bm}}{% if blkSt.addbg %} tbg{% endif %}" {{ block.shopify_attributes }} style="--fs:{{ blkSt.fs }}px;--cl:{{ blkSt.cl }};--bg:{{ blkSt.bg}};"> {{ blkSt.text }}</div>
+            <div class="customtx text-lg mb{{blkSt.bm}}{% if blkSt.addbg %} tbg{% endif %}" {{ block.shopify_attributes }} style="--fs:{{ blkSt.fs }}px;--cl:{{ blkSt.cl }};--bg:{{ blkSt.bg}};"> {{ blkSt.text }}</div>
         {%  when 'ras' %}
             <div class="product-info mb{{blkSt.bm}}" {{ block.shopify_attributes }}>
                 {%- if settings.show_product_review -%}
@@ -300,7 +300,7 @@
                 {%- render 'products-group', blkSt: blkSt, infoLinks:infoLinks  -%}
             {%- else -%}
                 {%- assign product_form_id = 'product-form-' | append: section.id -%}
-                <product-form class="db productForm mb{{blkSt.bm}}" {{ block.shopify_attributes }}>
+                <product-form class="db productForm md:mb-5 mb-8" {{ block.shopify_attributes }}>
                     {%- form 'product', product, id: product_form_id, class: 'form', novalidate: 'novalidate', data-type: 'add-to-cart-form' -%}
                         <div class="product-form mfp-link fl f-aie f-wrap mb-4">
                             {% assign isSwatch = false %}
@@ -350,7 +350,7 @@
                             <div class="pform-error-wrap errors" role="alert" hidden><span class="ml5 pform-error-msg"></span></div>
                             <div class="fl product-action">
                                 <label class="lblqty v-hidden" for="quantity">{{ 'products.product.quantity' | t }}</label>
-                                <div class="fl f-wrap f-aic f-jcsb">
+                                <div class="f-wrap f-aic f-jcsb md:flex hidden">
                                     {%- if blkSt.qty_sel -%}
                                         <quantity-input class="qtyField mb15 overflow-hidden" title="{{ 'products.product.quantity' | t }}">
                                             <button type="button" class="qtyBtn minus" name="minus"><i class="at at-minus-r" aria-hidden="true"></i><span class="v-hidden">{{- 'products.quantity.decrease' | t: product: product.title | escape -}}</span></button>
