--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -10,7 +10,7 @@
 	endif
 -%}
 
-<div class="swatch pvOpt{{optindex}} fl f-wrap option{{optg}} mb15 w_100" data-option-index="{{ optindex }}">
+<div class="swatch pvOpt{{optindex}} fl f-wrap option{{optg}} !mb-4 w_100" data-option-index="{{ optindex }}">
 	<label class="header w_100 fl text-lg !normal-case !font-semibold text-black-500">
         {{ swatch.name }}- <span class="slVariant ml5">{{swatch.selected_value}}</span>
         {%- if sizechart -%}
@@ -29,14 +29,14 @@
 			<input class="swatchInput dn single-option-selector-{{secId}}{% if is_color %} colorsw{% endif %}" id="{{product.id}}-{{ optg }}-{{ value | handle }}" data-index="option{{optg}}" data-var="{{ value | handle }}" type="radio" name="{{ swatch.name | handle }}" value="{{ value | escape }}"{% if swatch.selected_value == value %} checked{% endif %} />
 			{% if is_color %}
                 {% if settings.sw_type == "color" %}
-                    <label class="swatchLbl color !shadow-[inset_0px_0px_0px_3.5px_white] {{settings.sw_size}} swt{{value | handle}}" for="{{product.id}}-{{ optg }}-{{ value | handle }}"
+                    <label class="!w-7 !h-7 swatchLbl color md:!shadow-[inset_0px_0px_0px_3.5px_white] !shadow-[inset_0px_0px_0px_5px_white] {{settings.sw_size}} swt{{value | handle}}" for="{{product.id}}-{{ optg }}-{{ value | handle }}"
 						style="background-color:{{ value | handle }};"></label>
                 {% else %}
-                    <label class="swatchLbl color !shadow-[inset_0px_0px_0px_3.5px_white] {{settings.sw_size}} lazyload" for="{{product.id}}-{{ optg }}-{{ value | handle }}" data-bgset="{{ variant.image.src | product_img_url: '100x'}}" data-sizes="auto" data-parent-fit="contain"></label>
+                    <label class="!w-7 !h-7 swatchLbl color md:!shadow-[inset_0px_0px_0px_3.5px_white] !shadow-[inset_0px_0px_0px_5px_white] {{settings.sw_size}} lazyload" for="{{product.id}}-{{ optg }}-{{ value | handle }}" data-bgset="{{ variant.image.src | product_img_url: '100x'}}" data-sizes="auto" data-parent-fit="contain"></label>
                 {% endif %}
                 <span class="tooltip-label top">{{ value }}</span>
 			{% else %}
-			    <label class="swatchLbl w-16" for="{{product.id}}-{{ optg }}-{{ value | handle }}">{{ value }}</label>            	
+			    <label class="swatchLbl w-16 md:!h-7 md:!py-0 !py-1 !h-auto md:!text-base !text-sm" for="{{product.id}}-{{ optg }}-{{ value | handle }}">{{ value }}</label>            	
 			{% endif %}
 			</div>
 		{% endunless %}
